force-app/main/default/objects/Candidate__c/fields/Failed_Pass_Reason__c.field-meta.xml
<CustomField>
    <fullName>Failed_Pass_Reason__c</fullName>
    <label>Failed/Pass Reason</label>
    <type>TextArea</type>
</CustomField>