force-app/main/default/objects/Candidate__c/fields/Need_Interview__c.field-meta.xml
<CustomField>
    <fullName>Need_Interview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Interview</label>
    <type>Checkbox</type>
</CustomField>