force-app/main/default/objects/Candidate__c/fields/Need_To_Submit_CV__c.field-meta.xml
<CustomField>
    <fullName>Need_To_Submit_CV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need To Submit CV</label>
    <type>Checkbox</type>
</CustomField>