force-app/main/default/objects/Candidate__c/fields/Seniority__c.field-meta.xml
<CustomField>
    <fullName>Seniority__c</fullName>
    <label>Seniority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Junior(1-3 years)</fullName>
            </value>
            <value>
                <fullName>Mid-Level(3-7 years)</fullName>
            </value>
            <value>
                <fullName>Senior(7+ years)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>