force-app/main/default/objects/Candidate__c/fields/Skill_Set__c.field-meta.xml
<CustomField>
    <fullName>Skill_Set__c</fullName>
    <label>Skill Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>