force-app/main/default/objects/Candidate__c/fields/Submit_CV_Status__c.field-meta.xml
<CustomField>
    <fullName>Submit_CV_Status__c</fullName>
    <label>Submit CV Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Creating</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>